gloo/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # note: this annotation is only required if you've set
    # REQUIRE_INGRESS_CLASS=true in the environment for
    # the ingress deployment
    kubernetes.io/ingress.class: gloo
spec:
  rules:
    - host: gloo.example.com
      http:
        paths:
          - path: /nginx/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
