gloo/petstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petstore-ingress
  annotations:
    # note: this annotation is only required if you've set
    # REQUIRE_INGRESS_CLASS=true in the environment for
    # the ingress deployment
    kubernetes.io/ingress.class: gloo
spec:
  tls:
    - hosts:
        - gloo.example.com
      secretName: my-tls-secret
  rules:
    - host: gloo.example.com
      http:
        paths:
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
